added release folder updated scripts

--- a/box_utils/box_auto/cfg/klein_uuid_mapping.yaml
+++ b/box_utils/box_auto/cfg/klein_uuid_mapping.yaml
@@ -1,207 +1,276 @@
 2024-10-01-11-29-55:
   uuid: 79f6c6b8-9e48-4c52-b31d-446d0f5de013
   uuid_pub: d7525079-5564-461e-a144-e7479247d268
+  uuid_release: e97e35ad-dd7b-49c4-a158-95aba246520e
 2024-10-01-11-47-44:
   uuid: 1431d8d4-ec3f-485f-8518-76a9f75c65ea
   uuid_pub: 9909e81f-a769-45d3-85c8-a855b3b46647
+  uuid_release: 4ae7f9bc-ee51-4ba7-97c7-6a86fe765ab8
 2024-10-01-12-00-49:
   uuid: 8a088084-fe3e-43fe-bf2c-498c98a054d8
   uuid_pub: 1aa04616-4b40-4ccc-9139-bed14a156591
+  uuid_release: da8f2265-5138-4d0b-8ae1-01e0015d1c58
 2024-10-29-09-08-34:
   uuid: aac088c5-ea62-404e-a21b-59775e8caa9d
   uuid_pub: 11c91186-9695-4468-8b27-d9ce13f61031
+  uuid_release: bb6ca361-9fa4-4e63-87b2-26240cbc2ee9
 2024-10-29-09-53-44:
   uuid: 7b91d33c-2dce-4194-9df3-d6b7ef8950cc
   uuid_pub: 2fc59b49-82a4-48f4-bbac-5a72a997947d
+  uuid_release: 592fe05a-5e84-4e36-8b70-6d75d28b514b
 2024-10-29-16-11-44:
   uuid: 43457f5f-d559-4d82-9d29-209dae089671
   uuid_pub: d546dcc9-baa4-4c41-92c5-5412a41e18ae
+  uuid_release: 547e2b14-57ac-48d2-be7a-0b3de13cdd7e
 2024-11-01-17-46-15:
   uuid: c00eaf5b-42bc-4d6c-a0b2-086e78d16f0c
   uuid_pub: 158c23e5-bba0-419e-ad35-52cd74ccdaca
+  uuid_release: d4e20ecc-5fd6-4da5-aaa2-9cbdd827a326
 2024-11-02-17-10-25:
   uuid: 505853a7-82ce-4408-a603-473b579da622
   uuid_pub: 0f835059-8442-49c9-acc5-3f76711c01ea
+  uuid_release: b845fb1b-310c-4236-a33c-c0d2c9a98092
 2024-11-02-17-18-32:
   uuid: cdf8617f-d643-4bb4-9c8f-976c04dafafd
   uuid_pub: f463e3f5-7e41-49c0-b614-7f59545de907
+  uuid_release: 57b64279-18a3-451b-a516-51c1ea9c7e9a
 2024-11-02-17-43-10:
   uuid: 5c258464-4797-4080-ad8b-780fc02410d7
   uuid_pub: 92c28ffb-b494-4cff-b5c6-ea42e6d47c72
+  uuid_release: c31cdc28-cb10-4eff-adec-53b0069eacac
 2024-11-02-19-47-44:
   uuid: 9c1e0fde-53a3-49f5-a943-0bdcb9c1de4a
   uuid_pub: 6441eea4-29a0-44e2-9fea-f0c5ae24f7f4
+  uuid_release: 1aa273fc-2794-4bca-80e9-51fa8a3057e7
 2024-11-02-20-03-21:
   uuid: f4962481-018e-49c2-bd2f-1a570c5c4d11
   uuid_pub: 95b257e5-8a1e-434b-8fb2-df49b48cef83
+  uuid_release: 8852170f-c765-42cf-84db-bcefb9dcc48f
 2024-11-02-20-26-48:
   uuid: 23eb33b1-3cf2-4791-8fd6-cd1d4fc28686
   uuid_pub: 315eb59f-e98c-4220-aef4-7f9932bc2ad4
+  uuid_release: f151e2d4-f139-4752-a5ae-fa208e732b03
 2024-11-02-21-12-51:
   uuid: 3e451087-704e-41d6-865e-5f7c96276690
   uuid_pub: 689c8c9c-46ad-48d6-9061-bbd33c1accfb
+  uuid_release: 6a572e3b-57ad-4697-9ce6-0c67f451174a
 2024-11-03-07-52-45:
   uuid: bb6795bd-e38d-4085-bd7b-22248a430f29
   uuid_pub: 265836cc-761d-4c2c-92b0-41e4cac007bc
+  uuid_release: d7c37880-a3cf-4aaa-b489-e501591d14b7
 2024-11-03-07-57-34:
   uuid: 25bfe0c8-96ff-43d1-8b51-e044a21b53c3
   uuid_pub: 62cd7379-28dc-4ff4-85d3-b029401a9834
+  uuid_release: 82e5488f-7824-45c6-94be-b3c68ca32aa7
 2024-11-03-08-17-23:
   uuid: 34f19ac3-7f35-4cf4-98f6-b61a912f7ca6
   uuid_pub: 68a48a89-7d05-4a26-8bfe-8bb84b1ad631
+  uuid_release: ee14fd01-73f1-498b-8b64-a427257ea577
 2024-11-03-08-42-30:
   uuid: a83081a6-4a07-418a-8cee-943cd024325d
   uuid_pub: 5275edcf-42b8-4650-8c92-51fd1c4ba1d8
+  uuid_release: 651b60a5-d82c-411d-91d0-1023ead5af85
 2024-11-03-11-03-50:
   uuid: b69be373-a126-4a0e-85e9-754fa41ec1da
   uuid_pub: 6ca5ad63-c9b7-4898-b922-da5581a5c5e1
+  uuid_release: 537a76c4-5b82-4053-8787-690466a1c197
 2024-11-03-13-51-43:
   uuid: 86d7cf0c-62c5-4ab2-ae90-8288072ba96d
   uuid_pub: 2be79431-f01d-4d2e-8fc7-921f62f4976e
+  uuid_release: aa22a692-a29d-4676-98b8-42dd417eeae4
 2024-11-03-13-59-54:
   uuid: c171bee4-28f4-43c3-827a-ffd7c18583bc
   uuid_pub: 8e4912a8-08b3-4136-88bb-5eeff8dbc646
+  uuid_release: a2bb34d5-f963-4a63-bf4a-8ffab2da1589
 2024-11-03-14-36-54:
   uuid: 120ed19f-7928-4701-bfbd-bed46c4a6403
   uuid_pub: cd01d8e5-c14d-41ed-a0e7-3ff0a3c50e9c
+  uuid_release: 797497de-b469-4182-8593-bba1cd7b1e15
 2024-11-04-10-57-34:
   uuid: 3154972c-624e-4a94-95bf-83c76ca5355b
   uuid_pub: f59e3cf5-ba77-46e2-855b-d1d467a0d8c0
+  uuid_release: 34c04ec5-c1b7-4674-9d64-99ade50f71d0
 2024-11-04-11-56-53:
   uuid: be0c6647-3f46-447c-b96b-7816ee33e40d
   uuid_pub: af4dc571-eff8-46a6-84f2-36d86bf8e3e6
+  uuid_release: f537796e-8037-4136-bf91-e5ada2e2e672
 2024-11-04-12-55-59:
   uuid: 7b1784ab-8045-4da0-bb69-b1a6c644361d
   uuid_pub: 80822287-3c3d-4fd3-b201-6af3fd2ccc7c
+  uuid_release: 7ffa3399-837f-40b7-8a2f-5760ce136533
 2024-11-04-13-07-13:
   uuid: ca6db1b8-f7b4-4498-a0b0-679eb16cef62
   uuid_pub: da9beecc-1c81-4d20-99f8-b70ab7e63adf
+  uuid_release: 58e4d73e-fff1-4209-bf95-6c1ee065b3f3
 2024-11-04-14-19-11:
   uuid: 9b10e9db-ab23-4cb2-8487-fa5403d45913
   uuid_pub: 09151434-d69e-4e6e-82a2-6e3da8ed9328
+  uuid_release: 5df9aee6-6a7f-40ce-aea0-7fa421522f7a
 2024-11-04-14-55-02:
   uuid: b243fc8b-ca51-4950-9659-1368d5385aba
   uuid_pub: eaf6d2f4-c06e-457d-a11a-6ec66f00cebe
+  uuid_release: 063f9e93-fdee-489d-b7f0-a0138323dc4c
 2024-11-04-16-05-00:
   uuid: 1d436835-4cc3-4351-a35d-270b57880d75
   uuid_pub: a4230833-d7a9-494c-8a3d-66145cd3fd8f
+  uuid_release: d38b3b33-c450-4bce-bbb8-5f961b6bb17c
 2024-11-04-16-52-38:
   uuid: 6da55a8b-a3a5-42a8-a496-53dee287e431
   uuid_pub: da77ae1a-3856-474a-9dc6-ec0425cf5748
+  uuid_release: 57363d91-6cbc-4b2f-ad25-d511fd0829e1
 2024-11-11-12-07-40:
   uuid: 79a64a02-f81e-4150-8de7-d5904ae2bd81
   uuid_pub: d851c98a-1f2a-47ca-ad66-b894036267ef
+  uuid_release: e3a92c6b-1fbb-496a-bdb0-ec754ec8f6f0
 2024-11-11-12-42-47:
   uuid: e6580214-d883-4a4b-9742-37f44d20e374
   uuid_pub: 849af5e2-1591-4e4c-9533-e257796c9290
+  uuid_release: 8a90fb38-885e-4b57-ad21-b7e44d3ec8fb
 2024-11-11-13-06-23:
   uuid: 8d5d7e8f-109d-468e-8f52-274d24020b3a
   uuid_pub: fcaa044b-8ad4-48ed-900d-a97f3acfdd99
+  uuid_release: 375c5896-4513-44dc-8e79-42d8ef3a9a98
 2024-11-11-14-29-44:
   uuid: 45041a33-1410-4eea-a506-75aff00eb30d
   uuid_pub: 2dd72676-6939-4b92-97bf-55ab1bb64f41
+  uuid_release: f7e8e6c1-828f-43a7-b047-1491217e8fb9
 2024-11-11-16-14-23:
   uuid: 1942c776-82dd-4dcf-ace2-7ff5738769e2
   uuid_pub: 03b2c7d4-4795-4285-b18f-04389b6ee268
+  uuid_release: 10aa8311-2487-4e5c-9136-91b1d9ae4efa
 2024-11-14-11-17-02:
   uuid: 432d6c4f-8dc1-4c23-95e4-bddfe0e32ad4
   uuid_pub: 5cdb786d-9bd5-4be4-a720-13e95dc3d6ac
+  uuid_release: 1a30c7fd-d833-48ac-8bf5-0d3f3f0ba5a1
 2024-11-14-12-01-26:
   uuid: 0df5636d-6612-4296-8b46-d713ffe0e358
   uuid_pub: 436a57ea-390a-4dea-af7e-10fb8b604a87
+  uuid_release: 5e356450-ccb0-4b8c-bd5e-21e5bfdb0d08
 2024-11-14-13-45-37:
   uuid: e9a2a009-b893-4743-9d37-eed954469982
   uuid_pub: 08c755dc-1b85-46b0-a887-9e60ebda5eb4
+  uuid_release: 512edee1-de86-463f-bdda-f55362e2fda1
 2024-11-14-14-36-02:
   uuid: c513f500-82ad-486c-aebd-6b1ae728ec94
   uuid_pub: cb74d544-05ae-4629-b9a6-e79c683566de
+  uuid_release: 1b64c4e0-2747-4a4d-b983-2454b5481a69
 2024-11-14-15-22-43:
   uuid: e311107b-1c8e-44dd-abcb-ec60a59ce330
   uuid_pub: 4b559f60-8ad4-442e-9aeb-4e9548255bb4
+  uuid_release: a454ce28-69f8-46a5-9168-08b2c42ae385
 2024-11-14-16-04-09:
   uuid: 6a6c87ce-9b85-4c56-b4d6-b37453a94ed9
   uuid_pub: 8a1dda25-d8fd-4883-9816-9ff84823e8ad
+  uuid_release: 8c3d3ce2-df6a-4ec4-98f5-1a9e08ef276e
 2024-11-15-10-16-35:
   uuid: cfa237e4-386d-4539-9ba5-667b1f176a21
   uuid_pub: 66736cdf-613f-4cde-ac42-547363bab95a
+  uuid_release: b686ebd4-da47-4e49-ab20-c5504049f4b8
 2024-11-15-11-18-14:
   uuid: a5499f97-c96e-49fd-a120-5e769f5f00a9
   uuid_pub: 561142d5-38b7-4f74-bed2-5a8c83f120e2
+  uuid_release: 624138ba-3e34-4f19-8034-af9661a566a4
 2024-11-15-11-37-15:
   uuid: 4de26aa4-5b54-412b-bb99-3c7ca1b05bf5
   uuid_pub: 251e8b86-40bf-4c1f-90fb-02b90eafa1df
+  uuid_release: 4aa3b180-7422-479f-a838-344c726175e1
 2024-11-15-12-06-03:
   uuid: b08f0bcb-571a-4cfb-9a04-58f0c6928bdd
   uuid_pub: 940d0443-aaea-4b10-86ca-eb08de9fbc2b
+  uuid_release: ccf36f13-9d19-4dca-8f4d-f797b4093c3b
 2024-11-15-13-56-45:
   uuid: 4504bec7-0e28-4cb5-819c-8bc38f711d12
   uuid_pub: ea3c88b3-e96f-4a89-a16a-c5bf8f491a17
+  uuid_release: ae25ca03-51b8-444f-8401-899364eec1de
 2024-11-15-14-14-12:
   uuid: 94b2d7c6-5d20-4e9a-9c4a-2e58064faf5c
   uuid_pub: 9ce262ab-d0a4-48db-b043-427861078493
+  uuid_release: 2924d315-1d96-4db7-9df2-c9fd23d3fa9e
 2024-11-15-14-43-52:
   uuid: a634dee5-60e5-46e3-a83f-3b062cc42895
   uuid_pub: f276674a-b962-4d60-9a62-0b4ab4eee3aa
+  uuid_release: a866b43f-4cec-427d-871a-77d95a926075
 2024-11-15-15-07-36:
   uuid: cf4bdddc-7ed4-444a-8d7a-de59364693eb
   uuid_pub: dcec4b4c-b2be-4d13-a87c-f00869dabc6c
+  uuid_release: 67a94248-3c83-448f-a287-576a30fb1417
 2024-11-15-16-41-14:
   uuid: d66057fc-8e40-4939-a6ce-c4833d2b2964
   uuid_pub: 7e403b05-0e0d-4810-ad2a-13a783acc520
+  uuid_release: 4bf387d8-624a-462b-b69b-f2b4dbfce565
 2024-11-18-11-42-04:
   uuid: c10798d4-2690-4076-9f70-130b211adee8
   uuid_pub: e029dc41-1685-43c5-ac04-5b30fef35116
+  uuid_release: 5ba22f65-357d-47bc-889c-f4d22f5d2a26
 2024-11-18-12-05-01:
   uuid: 15dbe938-35d2-4b80-968c-5e809160cd43
   uuid_pub: 4f632147-255d-453c-8cca-fb110e164278
+  uuid_release: 0a626104-cdfa-47de-827a-806b0ca5326a
 2024-11-18-13-22-14:
   uuid: 93ac4636-de7a-43cf-8057-7f25755f7be9
   uuid_pub: 9a1df97f-e907-4abe-917b-b32e1c029df2
+  uuid_release: 2a4c4bd7-acfd-4c00-84c3-bf5dd6a57ad6
 2024-11-18-13-48-19:
   uuid: 58bdee5a-0d4c-4ad2-afca-26a81bb5226b
   uuid_pub: ec86579f-121d-4472-80a9-00296495b4a9
+  uuid_release: a031c136-cdba-4547-bce7-57319891ce17
 2024-11-18-15-46-05:
   uuid: 8ef688b4-cde8-4f7d-b366-fce10d11a455
   uuid_pub: 42ebcc94-b219-48be-89a9-3f50d3c04330
+  uuid_release: ad4cbee5-c3d8-4082-b629-e22af45faac8
 2024-11-18-16-45-27:
   uuid: 4d896ffa-2075-4402-b5cc-068a96e684ab
   uuid_pub: 5b943d5a-5d89-4c8e-b804-830b36d8f87b
+  uuid_release: ccd893bf-3cb3-4e13-af56-3cec3e33a28c
 2024-11-18-16-59-23:
   uuid: 411fff04-fafb-4115-a123-4fa3c06c9e48
   uuid_pub: 99a5367e-0834-4f7e-94fe-089a55b38d76
+  uuid_release: ff789a67-7541-43d8-bbe7-381e5d5105ab
 2024-11-18-17-13-09:
   uuid: 00e59f99-c98f-4cf4-b1b4-6a90a1218a73
   uuid_pub: a47e61ad-e0d9-407c-abf2-299d7508b452
+  uuid_release: c38e6cdc-cadb-4f15-bd96-daa89cb46edf
 2024-11-18-17-31-36:
   uuid: 12139d35-148d-4b27-8232-5116a4ac9a10
   uuid_pub: 8d44fe80-833d-4987-828e-2da49b443aa0
+  uuid_release: 529abc82-87fc-4edf-a16f-9061893c5aab
 2024-11-21-16-36-19:
   uuid: 7e127b00-dd50-413d-9728-29856c6943b6
   uuid_pub: db403d9d-49e5-40e7-8657-4a2ecee96dab
+  uuid_release: d8e1fd5b-e4fe-4c82-8d46-4cfeabe2e1e8
 2024-11-25-14-57-08:
   uuid: df0abba7-1e61-427f-8111-d1f77d52dddc
   uuid_pub: 1bf5ed41-1ab8-47b7-a625-676b82482a17
+  uuid_release: 19e1ac85-eaf9-4d8e-baf0-27dbb215e9f4
 2024-11-25-16-02-15:
   uuid: 8693e856-9347-4295-a139-41ab518a0f6f
   uuid_pub: d5107332-f0f6-408b-9147-c304abff629a
+  uuid_release: 8192d0ce-b480-4668-aba2-37f2e4c89a87
 2024-11-25-16-36-19:
   uuid: a44792cd-b474-4e07-a03d-e19542e78b13
   uuid_pub: 6e6d0665-042f-41b8-bdea-100ffadbb3f1
+  uuid_release: fb5f7a04-e95f-4601-a6f2-948ff69f0735
 2024-12-03-13-15-38:
   uuid: e6c30062-997a-407d-8a68-232d1f3dd505
   uuid_pub: b856a8a9-5038-48c1-86e7-600ee07d57d1
+  uuid_release: 75516885-5b6d-4703-9dcc-766519f9737c
 2024-12-03-13-26-40:
   uuid: 1c6c9d86-606d-476c-9226-02da290eb35d
   uuid_pub: f626f7d3-3057-473e-a4b0-90d5d60538cb
+  uuid_release: 6feee8a7-2588-4e7e-9fd4-cf897af71206
 2024-12-09-09-34-43:
   uuid: 83588d12-cb89-4034-b4f7-6e13ca74cbce
   uuid_pub: c5b327d4-519d-4e33-9541-0742e758cc04
+  uuid_release: d3943914-d045-4442-a63c-903cbbbd2be1
 2024-12-09-09-41-46:
   uuid: 5536d4b8-27e0-495d-becc-03cd80e46de0
   uuid_pub: 30bcc9c1-0475-4938-9254-8b620ccd0388
+  uuid_release: 48a42585-1b42-44df-bf82-883b09706efa
 2024-12-09-11-28-28:
   uuid: b3332086-58ab-43a4-a1e5-a0d63836ac0d
   uuid_pub: e133336c-9787-4f95-95b9-c898398972fc
+  uuid_release: f6d20c92-44af-4697-a6d5-773bddc35fa5
 2024-12-09-11-53-11:
   uuid: 7a5c5fd5-683d-44a4-a27e-af08ea0229ab
   uuid_pub: 6d433ca0-8f5f-443e-a990-c8cebf6d1ebb
+  uuid_release: a531a101-0211-46a2-b13f-605aa4b888ab
