--- a/box_utils/box_converter/grand_tour_offline.yaml
+++ b/box_utils/box_converter/grand_tour_offline.yaml
@@ -2,6 +2,7 @@ base_frame: dlio_map
 num_images_per_topic: 1000
 skip_start_seconds: 60
 skip_end_seconds: 45
+distance_threshold: 1.0
 hz: 4
 
 cameras:
@@ -27,7 +28,7 @@ nerfstudio:
 
 wavemap:
   log_odds_occupancy_threshold: 0.1
-  max_range: 20
+  max_range: 150
   default_depth_value: -1.0
   save_ros: True
   save_png: True
