--- a/box_utils/box_converter/grand_tour_ground.yaml
+++ b/box_utils/box_converter/grand_tour_ground.yaml
@@ -10,16 +10,6 @@ cameras:
   info_topic: /gt_box/hdr_front/camera_info
   bag_pattern: "*_hdr_front_calib.bag"
   depth_topic_out:  /gt_box/hdr_front/depth
-- name: left
-  image_topic: /gt_box/hdr_left/image_raw/compressed
-  info_topic: /gt_box/hdr_left/camera_info
-  bag_pattern: "*_hdr_left_calib.bag"
-  depth_topic_out:  /gt_box/hdr_left/depth
-- name: right
-  image_topic: /gt_box/hdr_right/image_raw/compressed
-  info_topic: /gt_box/hdr_right/camera_info
-  bag_pattern: "*_hdr_right_calib.bag"
-  depth_topic_out:  /gt_box/hdr_right/depth
 
 nerfstudio:
   blur_threshold: 0 # 80 is pretty good
@@ -31,6 +21,6 @@ wavemap:
   default_depth_value: -1.0
   save_ros: True
   save_png: True
-  ground: False
-  distance_threshold: -1
-  key: "depth"
+  ground : True
+  distance_threshold: 1.0
+  key: "ground"
