--- a/box_utils/box_converter/grand_tour_offline.yaml
+++ b/box_utils/box_converter/grand_tour_offline.yaml
@@ -3,6 +3,7 @@ num_images_per_topic: 1000
 skip_start_seconds: 60
 skip_end_seconds: 45
 hz: 4
+distance_threshold: -1
 
 cameras:
 - name: front
@@ -24,6 +25,7 @@ cameras:
 nerfstudio:
   blur_threshold: 0 # 80 is pretty good
   create_mask_based_on_semantics: False
+  store: False
 
 wavemap:
   log_odds_occupancy_threshold: 0.1
@@ -32,5 +34,4 @@ wavemap:
   save_ros: True
   save_png: True
   ground: False
-  distance_threshold: -1
   key: "depth"
