--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ box_utils/box_auto/cfg/all_missions_summary_xy_60_120_180.yaml
 box_utils/box_auto/cfg/mission_metadata.yaml
 box_utils/box_converter/cluster/.submit/*
 box_utils/box_converter/cluster/.export/*
+box_utils/box_auto/docker/.secrets/*
