--- a/box_utils/box_auto/cfg/boxi_tf_full.yaml
+++ b/box_utils/box_auto/cfg/boxi_tf_full.yaml
@@ -2,6 +2,7 @@ tfStaticRepetitionPeriod: 5 # seconds
 frameMapping:
   - new: "velodyne_lidar"
     old: "lidar"
+    replicate: true
 
 framePairs:
   - parent: ""
