fixed tf minimal

--- a/box_utils/box_auto/cfg/tf_minimal.yaml
+++ b/box_utils/box_auto/cfg/tf_minimal.yaml
@@ -3,7 +3,25 @@ frameMapping:
   - new: "velodyne_lidar"
     old: "lidar"
     replicate: false
-
+  - new: "zed2i_base"
+    old: "zed2i_base_link"
+  - new: "anymal_imu"
+    old: "imu_link"
+  - new: "depth_camera_front_lower"
+    old: "depth_camera_front_lower_depth_optical_frame"
+  - new: "depth_camera_front_upper"
+    old: "depth_camera_front_upper_depth_optical_frame"
+  - new: "depth_camera_rear_lower"
+    old: "depth_camera_rear_lower_depth_optical_frame"
+  - new: "depth_camera_rear_upper"
+    old: "depth_camera_rear_upper_depth_optical_frame"
+  - new: "depth_camera_right"
+    old: "depth_camera_right_depth_optical_frame"
+  - new: "depth_camera_left"
+    old: "depth_camera_left_depth_optical_frame"
+  - new: "alphasense_imu"
+    old: "imu_sensor_frame"
+    replicate: false
 framePairs:
   - parent: "base"
     child: "lidar"
@@ -19,8 +37,26 @@ framePairs:
     child: "depth_camera_left_depth_optical_frame"
   - parent: "base"
     child: "depth_camera_right_depth_optical_frame"
+  - parent: "alphasense_base"
+    child: "alphasense_right"
+  - parent: "alphasense_base"
+    child: "alphasense_left"
+  - parent: "alphasense_base"
+    child: "alphasense_front_right"
+  - parent: "alphasense_base"
+    child: "alphasense_front_left"
+  - parent: "alphasense_base"
+    child: "alphasense_front_center"
 
 childFramesToRemove:
+  - "cpt7_antenna_back"
+  - "cpt7_antenna_front"
+  - "cam2_sensor_frame"
+  - "cam1_sensor_frame"
+  - "cam2_sensor_frame"
+  - "cam3_sensor_frame"
+  - "cam4_sensor_frame"
+  - "cam5_sensor_frame"
   - "map"
   - "aft_mapped"
   - "battery"
@@ -46,16 +82,19 @@ childFramesToRemove:
   - "depth_camera_front_upper_camera_parent"
   - "depth_camera_rear_lower_camera_parent"
   - "depth_camera_rear_upper_camera_parent"
+  - "depth_camera_left_camera_parent"
+  - "depth_camera_right_camera_parent"
+  - "depth_camera_left_camera"
+  - "depth_camera_right_camera"
   - "face_rear"
   - "face_front"
   - "control"
   - "loco_footprint"
-  - "depth_camera_left_camera_parent"
-  - "depth_camera_right_camera_parent"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00000_visual"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00001_visual"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00002_visual"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00003_visual"
+  - "cpt7_antenna_back_model"
 
 parentFramesToRemove:
   - "map"
@@ -65,6 +104,8 @@ parentFramesToRemove:
   - "wide_angle_camera_front_camera"
   - "face_front"
   - "face_rear"
+  - "depth_camera_left_camera"
+  - "depth_camera_right_camera"
   - "depth_camera_front_lower_camera"
   - "depth_camera_front_upper_camera"
   - "depth_camera_rear_lower_camera"
@@ -92,10 +133,12 @@ parentFramesToRemove:
   - "docking_station__apriltag36_11_00002_link"
   - "docking_station__apriltag36_11_00003_link"
   - "docking_station__docking_port_link"
+  - "docking_station"
+  - "ground_plane"
+  - "ground_plane__link"
 
 childFramesToInverse:
   - "base"
-
 # Absolutely not the best way to do it.
 # rotationOverrides:
 #   - parent: "zed2i_left_camera_optical_frame"
