--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -12,8 +12,8 @@ x-common-config: &common-config
   environment:
     QT_X11_NO_MITSHM: "1"
     XAUTHORITY: "/root/.docker.xauth"
-    DISPLAY: "$DISPLAY"  
-    KLEINKRAM_ACTIVE: "False"  # Added this line
+    DISPLAY: "$DISPLAY"
+    KLEINKRAM_ACTIVE: "False" # Added this line
   deploy:
     resources:
       reservations:
@@ -24,7 +24,7 @@ x-common-config: &common-config
               - gpu
               - utility # nvidia-smi
               - compute # CUDA
-              - video   # encoding 
+              - video # encoding
   volumes:
     - "${MISSION_DATA:-/mission/data}:/tmp_disk"
     - "${GRAND_TOUR_BOX_PATH:-$HOME/git/grand_tour_box}:/home/catkin_ws/src/grand_tour_box"
@@ -43,7 +43,7 @@ x-ros2-common-config: &ros2-common-config
     QT_X11_NO_MITSHM: "1"
     XAUTHORITY: "/root/.docker.xauth"
     DISPLAY: "$DISPLAY"
-    KLEINKRAM_ACTIVE: "False"  # Added this line
+    KLEINKRAM_ACTIVE: "False" # Added this line
   deploy:
     resources:
       reservations:
@@ -54,11 +54,10 @@ x-ros2-common-config: &ros2-common-config
               - gpu
               - utility # nvidia-smi
               - compute # CUDA
-              - video   # encoding 
+              - video # encoding
   volumes:
     - "${MISSION_DATA:-/mission/data}:/tmp_disk"
     - "${GRAND_TOUR_BOX_PATH:-$HOME/git/grand_tour_box}:/home/catkin_ws/src/grand_tour_box"
-
 
 services:
   # Input:
@@ -68,8 +67,11 @@ services:
   hdr_convert:
     <<: *ros2-common-config
     container_name: hdr_convert
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/mcap_to_rosbag.py"]
-  
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/mcap_to_rosbag.py",
+      ]
+
   # Input:
   #   - _hdr.bag
   # Output:
@@ -77,7 +79,10 @@ services:
   hdr_timestamp_adjuster:
     <<: *common-config
     container_name: hdr_timestamp_adjuster
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py",
+      ]
     # depends_on:
     #   hdr_convert:
     #     condition: service_completed_successfully
@@ -89,8 +94,10 @@ services:
   alphasense_fix_frame_id:
     <<: *common-config
     container_name: alphasense_fix_frame_id
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/alphasense_fix_frame_id.py"]
-
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/alphasense_fix_frame_id.py",
+      ]
 
   # Input:
   #   - hdr_updated.bag
@@ -103,13 +110,15 @@ services:
   calibration:
     <<: *common-config
     container_name: calibration
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py",
+      ]
     depends_on:
       hdr_timestamp_adjuster:
         condition: service_completed_successfully
       alphasense_fix_frame_id:
         condition: service_completed_successfully
-
 
   # Input:
   #   - _nuc_cpt7.bag
@@ -119,7 +128,10 @@ services:
   cpt7_update_live_header_time:
     <<: *common-config
     container_name: cpt7_update_live_header_time
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7_update_live_header_time.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7_update_live_header_time.py",
+      ]
 
   # Input:
   #   - _jetson_ap20_synced.bag
@@ -140,7 +152,10 @@ services:
   imu_intrinsics:
     <<: *common-config
     container_name: imu_intrinsics
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_imu_intrinsics.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_imu_intrinsics.py",
+      ]
     depends_on:
       # calibration:
       #   condition: service_completed_successfully
@@ -156,7 +171,10 @@ services:
   ap20_python_online_matcher:
     <<: *common-config
     container_name: ap20_python_online_matcher
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py",
+      ]
 
   # Input:
   #   - ap20_synced.bag
@@ -165,7 +183,10 @@ services:
   ap20_validate:
     <<: *common-config
     container_name: ap20_validate
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py",
+      ]
     depends_on:
       ap20_python_online_matcher:
         condition: service_completed_successfully
@@ -177,7 +198,10 @@ services:
   hesai:
     <<: *common-config
     container_name: hesai
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py",
+      ]
 
   # Input:
   #   - velodyne.bag
@@ -186,13 +210,18 @@ services:
   velodyne:
     <<: *common-config
     container_name: velodyne
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/velodyne.py"]
-
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/velodyne.py",
+      ]
 
   preview_video:
     <<: *common-config
     container_name: preview_video
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_converter/preview_video.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_converter/preview_video.py",
+      ]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -204,30 +233,37 @@ services:
   # Output:
   #   - hesai_ready.bag
   #   - livox_ready.bag
-  filter_pointclouds: 
+  filter_pointclouds:
     <<: *common-config
     container_name: filter_pointclouds
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py",
+      ]
     depends_on:
       hesai:
         condition: service_completed_successfully
       velodyne:
         condition: service_completed_successfully
-  
 
-  prepare_tf_transforms_for_public: 
+  prepare_tf_transforms_for_public:
     <<: *common-config
     container_name: prepare_tf_transforms_for_public
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/special/prepare_tf_transforms_for_public.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/special/prepare_tf_transforms_for_public.py",
+      ]
     depends_on:
       calibration:
         condition: service_completed_successfully
 
-
-  pointcloud_undistortion: 
+  pointcloud_undistortion:
     <<: *common-config
     container_name: pointcloud_undistortion
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/pointcloud_undistortion.py"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/pointcloud_undistortion.py",
+      ]
     depends_on:
       filter_pointclouds:
         condition: service_completed_successfully
@@ -242,7 +278,10 @@ services:
   dlio_hesai:
     <<: *common-config
     container_name: dlio_hesai
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py --lidar=hesai --imu=cpt7"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py --lidar=hesai --imu=cpt7",
+      ]
     depends_on:
       filter_pointclouds:
         condition: service_completed_successfully
@@ -257,7 +296,10 @@ services:
   dlio_livox:
     <<: *common-config
     container_name: dlio_livox
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py --lidar=livox --imu=cpt7"]
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py --lidar=livox --imu=cpt7",
+      ]
     depends_on:
       filter_pointclouds:
         condition: service_completed_successfully
@@ -269,7 +311,7 @@ services:
   #   - hesai_dlio.bag
   #   - tf_static.bag
   # Output:
-    # - open3d_slam.bag
+  # - open3d_slam.bag
   # open3d_slam:
   #   <<: *common-config
   #   container_name: open3d_slam
@@ -301,19 +343,20 @@ services:
   #   - cpt7_ie_tc.bag
   # Output:
   #   - graph_msf.bag
-  # graph_msf:
-  #   <<: *common-config
-  #   container_name: graph_msf
-  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py"]
-  #   depends_on:
-  #     hesai:
-  #       condition: service_completed_successfully
-  #     calibration:
-  #       condition: service_completed_successfully
-  #     ap20_validate:
-  #       condition: service_completed_successfully
-
-
+  graph_msf:
+    <<: *common-config
+    container_name: graph_msf
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py",
+      ]
+    depends_on:
+      hesai:
+        condition: service_completed_successfully
+      calibration:
+        condition: service_completed_successfully
+      ap20_validate:
+        condition: service_completed_successfully
 
   # euroc:
   #  <<: *common-config
@@ -322,7 +365,6 @@ services:
   # depends_on:
   #   calibration:
   #     condition: service_completed_successfully
-
 
   # This is currently not supported by any docker container.
   # Input:
@@ -349,7 +391,7 @@ services:
   #     imu_intrinsics:
   #       condition: service_completed_successfully
 
-  # Input: 
+  # Input:
   #   - _jetson_hdr_calib.bag
   #   - _nuc_alphasense_color.bag
   # Output:
@@ -381,7 +423,7 @@ services:
   #       condition: service_completed_successfully
   #     color_correction:
   #       condition: service_completed_successfully
-  
+
   # cpt7:
   #   <<: *common-config
   #   container_name: cpt7
@@ -394,4 +436,3 @@ services:
   #   depends_on:
   #     calibration:
   #       condition: service_completed_successfully
-  
