--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -123,7 +123,7 @@ services:
   # Input:
   #   - tf_static_start_end.bag
   #   - lpc_tf.bag
-  #   - dlio_hesai.bag
+  #   - hesai_dlio.bag
   #   - ie_tc.bag
   # Output:
   #   - tf_minimal.bag
@@ -143,7 +143,7 @@ services:
   # Input:
   #   - tf_static_start_end.bag
   #   - lpc_tf.bag
-  #   - dlio_hesai.bag
+  #   - hesai_dlio.bag
   #   - ie_tc.bag
   # Output:
   #   - tf_model.bag
