--- a/box_utils/box_auto/cfg/tf_model.yaml
+++ b/box_utils/box_auto/cfg/tf_model.yaml
@@ -2,41 +2,37 @@ tfStaticRepetitionPeriod: 5 # seconds
 frameMapping:
   - new: "velodyne_lidar"
     old: "lidar"
-    replicate: false
+    replicate: true
   - new: "zed2i_base"
     old: "zed2i_base_link"
+    replicate: false
   - new: "anymal_imu"
     old: "imu_link"
+    replicate: true
   - new: "depth_camera_front_lower"
     old: "depth_camera_front_lower_depth_optical_frame"
+    replicate: true
   - new: "depth_camera_front_upper"
     old: "depth_camera_front_upper_depth_optical_frame"
+    replicate: true
   - new: "depth_camera_rear_lower"
     old: "depth_camera_rear_lower_depth_optical_frame"
+    replicate: true
   - new: "depth_camera_rear_upper"
     old: "depth_camera_rear_upper_depth_optical_frame"
+    replicate: true
   - new: "depth_camera_right"
     old: "depth_camera_right_depth_optical_frame"
+    replicate: true
   - new: "depth_camera_left"
     old: "depth_camera_left_depth_optical_frame"
+    replicate: true
   - new: "alphasense_imu"
     old: "imu_sensor_frame"
     replicate: false
 framePairs:
   - parent: "base"
     child: "lidar"
-  - parent: "base"
-    child: "depth_camera_front_lower_depth_optical_frame"
-  - parent: "base"
-    child: "depth_camera_front_upper_depth_optical_frame"
-  - parent: "base"
-    child: "depth_camera_rear_lower_depth_optical_frame"
-  - parent: "base"
-    child: "depth_camera_rear_upper_depth_optical_frame"
-  - parent: "base"
-    child: "depth_camera_left_depth_optical_frame"
-  - parent: "base"
-    child: "depth_camera_right_depth_optical_frame"
   - parent: "alphasense_base"
     child: "alphasense_right"
   - parent: "alphasense_base"
@@ -51,7 +47,6 @@ framePairs:
 childFramesToRemove:
   - "cpt7_antenna_back"
   - "cpt7_antenna_front"
-  - "cam2_sensor_frame"
   - "cam1_sensor_frame"
   - "cam2_sensor_frame"
   - "cam3_sensor_frame"
@@ -59,63 +54,33 @@ childFramesToRemove:
   - "cam5_sensor_frame"
   - "map"
   - "aft_mapped"
-  - "battery"
-  - "bottom_shell"
-  - "docking_socket"
-  - "top_shell"
-  - "hatch_shell"
-  - "hbc_receiver"
-  - "body_top"
-  - "base_inertia"
   - "footprint"
   - "feetcenter"
-  - "face_shell_front"
-  - "hesai_model"
-  - "prism_model"
+  - "control"
   - "hesai_model"
   - "livox_model"
-  - "box_base_model"
-  - "face_shell_rear"
-  - lidar_parent
-  - "zed2i_right_camera_frame"
-  - "depth_camera_front_lower_camera_parent"
-  - "depth_camera_front_upper_camera_parent"
-  - "depth_camera_rear_lower_camera_parent"
-  - "depth_camera_rear_upper_camera_parent"
-  - "depth_camera_left_camera_parent"
-  - "depth_camera_right_camera_parent"
-  - "depth_camera_left_camera"
-  - "depth_camera_right_camera"
-  - "face_rear"
-  - "face_front"
-  - "control"
   - "loco_footprint"
+  - "depth_camera_front_upper_infra1_frame"
+  - "depth_camera_front_lower_infra1_frame"
+  - "depth_camera_rear_upper_infra1_frame"
+  - "depth_camera_rear_lower_infra1_frame"
+  - "depth_camera_left_infra1_frame"
+  - "depth_camera_right_infra1_frame"
+  - "depth_camera_front_upper_infra2_frame"
+  - "depth_camera_front_lower_infra2_frame"
+  - "depth_camera_rear_upper_infra2_frame"
+  - "depth_camera_rear_lower_infra2_frame"
+  - "depth_camera_left_infra2_frame"
+  - "depth_camera_right_infra2_frame"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00000_visual"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00001_visual"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00002_visual"
   - "docking_station__apriltag36_11_00000_link__visual__apriltag36_11_00003_visual"
-  - "cpt7_antenna_back_model"
 
 parentFramesToRemove:
   - "map"
   - "camera_init_CORRECTED"
   - "camera_init"
-  - "wide_angle_camera_rear_camera"
-  - "wide_angle_camera_front_camera"
-  - "face_front"
-  - "face_rear"
-  - "depth_camera_left_camera"
-  - "depth_camera_right_camera"
-  - "depth_camera_front_lower_camera"
-  - "depth_camera_front_upper_camera"
-  - "depth_camera_rear_lower_camera"
-  - "depth_camera_rear_upper_camera"
-  - "depth_camera_front_lower_camera_parent"
-  - "depth_camera_front_upper_camera_parent"
-  - "depth_camera_rear_lower_camera_parent"
-  - "depth_camera_rear_upper_camera_parent"
-  - "depth_camera_left_camera_parent"
-  - "depth_camera_right_camera_parent"
   - "depth_camera_front_upper_infra1_frame"
   - "depth_camera_front_lower_infra1_frame"
   - "depth_camera_rear_upper_infra1_frame"
@@ -139,13 +104,3 @@ parentFramesToRemove:
 
 childFramesToInverse:
   - "base"
-# Absolutely not the best way to do it.
-# rotationOverrides:
-#   - parent: "zed2i_left_camera_optical_frame"
-#     child: "zed2i_right_camera_optical_frame"
-#     axis: "x" # Ros convention is YAW, PITCH, ROLL hence (z, y, x)
-#     angle_deg: 0.0
-#   - parent: "zed2i_left_camera_frame"
-#     child: "zed2i_left_camera_optical_frame"
-#     axis: "x" # Ros convention is YAW, PITCH, ROLL hence (z, y, x)
-#     angle_deg: 180.0
