--- a/box_utils/box_auto/CMakeLists.txt
+++ b/box_utils/box_auto/CMakeLists.txt
@@ -154,7 +154,7 @@ target_link_libraries(zed2i_decompression_and_saving ${catkin_LIBRARIES} ${OpenC
 target_link_libraries(evo_conversion_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${PROJECT_NAME})
 
 
-find_package(cmake_clang_tools REQUIRED)
+find_package(cmake_clang_tools QUIET)
 
 # Use your .clang-tidy file — no redundant config
 set(CMAKE_CXX_CLANG_TIDY "clang-tidy")
